fixes modal scrollbar

--- a/app/scss/components/_subscription.scss
+++ b/app/scss/components/_subscription.scss
@@ -11,7 +11,6 @@
 	padding: 50px 26px;
 	padding-top: 18px;
 	color: $white;
-	overflow: scroll;
 	@include flex(column);
 	display: none;
 	box-shadow: 0px 3px 30px rgba($black, 0.16);
